# dufuth

./: .gitignore  FIREBASE_SETUP.md  README.md  backend-architect-prompt.md  firebase.json  firestore.indexes.json  flutter-engineer-prompt.md  pubspec.yaml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: config.py  firebase.py
backend/app/models/: app_version.py  appointment.py  availability_slot.py  common.py  department.py  device_token.py  doctor.py  doctor_alert.py  faq.py  hospital_info.py  patient.py  reminder.py  user.py
backend/app/repositories/: admin_repository.py  app_version_repository.py  appointment_repository.py  availability_slot_repository.py  department_repository.py  device_token_repository.py  doctor_alert_repository.py  doctor_repository.py  faq_repository.py  hospital_info_repository.py  in_memory_store.py  patient_repository.py  reminder_repository.py  user_repository.py
backend/app/schemas/: admin.py  app_version.py  appointment.py  auth.py  availability_slot.py  department.py  device.py  doctor.py  doctor_alert.py  faq.py  hospital_info.py  notification.py  patient.py  reminder.py  user.py
backend/app/services/: admin_service.py  (+15 more)
backend/scripts/: seed_faq_items.py  seed_hospital_info.py
backend/tests/: conftest.py  test_app_version.py  test_appointments.py  test_auth_service.py  test_availability_slots.py  test_departments.py  test_doctors.py  test_faq.py  test_health.py  test_hospital_info.py  test_patient_booking.py
(+88 files in other folders)
